--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,6 @@ springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.config-url=/api-docs/swagger-config
 springdoc.api-docs.groups.enabled=true
 springdoc.swagger-ui.url=/api-docs
+
+app.jwt.secret=your_jwt_secret_key_1234567890abcdef
+app.jwt.expiration=7200
