注册，登录，登出，修改密码，注册令牌

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 # 应用服务 WEB 访问端口
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/Fish01?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/fish_calculator_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=true
 spring.datasource.username=postgres
 spring.datasource.password=20010825
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -35,6 +35,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+# 解决PostgreSQL JSONB类型问题
+spring.jpa.properties.hibernate.types.print.banner=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # SpringDoc OpenAPI
 springdoc.api-docs.path=/api-docs
@@ -49,3 +52,6 @@ springdoc.swagger-ui.url=/api-docs
 
 app.jwt.secret=your_jwt_secret_key_1234567890abcdef
 app.jwt.expiration=7200
+
+# Session 配置
+app.session.expiration=7200
