添加短信验证码功能及Redis配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,27 @@ app.jwt.expiration=7200
 
 # Session 配置
 app.session.expiration=7200
+# ==================== Redis====================
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
+spring.redis.timeout=3000ms
+
+# Redis2
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+
+# ==================== aliyun====================
+aliyun.accessKeyId=your_access_key_id
+aliyun.accessKeySecret=your_access_key_secret
+aliyun.sms.signName=sutonghulian
+aliyun.sms.templateCode=100001
+
+# ==================== code ====================
+sms.code.length=6
+sms.code.expireTime=300
+sms.code.sendInterval=60
+sms.code.maxRetryTimes=5
