--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
+    // 使用最新版本的Dypnsapi SDK
+    implementation 'com.aliyun:dypnsapi20170525:2.0.0'
+    // 2.0.0兼容的版本
+    implementation 'com.aliyun:tea-openapi:0.2.8'
+    implementation 'com.aliyun:tea-util:0.2.17'
+    implementation 'com.aliyun:tea:1.2.3'
+    implementation 'com.aliyun:tea-console:0.0.1'
+    implementation 'com.aliyun:credentials-java:0.3.2'
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.apache.commons:commons-pool2:2.11.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
