--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,3 +79,22 @@ sms.code.length=6
 sms.code.expireTime=300
 sms.code.sendInterval=60
 sms.code.maxRetryTimes=5
+
+#Email
+spring.mail.host=smtp.qq.com
+spring.mail.port=587
+spring.mail.username=445600604@qq.com
+spring.mail.password=pass
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+
+# SMTP ????
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+
+# ??????
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
